@@ -48,6 +48,7 @@
 #include <CoreFoundation/CFPropertyList.h>
 #include <CoreFoundation/CFRunLoop.h>
 #include <CoreFoundation/CFSet.h>
+#include <CoreFoundation/CFSocket.h>
 #include <CoreFoundation/CFStream.h>
 #include <CoreFoundation/CFString.h>
 #include <CoreFoundation/CFStringEncodingExt.h>
